<resources>

    <string name="app_name">Oftentimes2000</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_featured">Featured</string>
    <string name="menu_subscription">Subscription</string>
    <string name="menu_categories">Categories</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="menu_map">View Map</string>
    <string name="map_it">Map It!</string>
    <string name="placeholder">placeholder</string>
    <string name="nothing">There is nothing here :(</string>
    <string name="highlights">Highlights</string>
    <string name="fineprint">Fine Print</string>
    <string name="about">About This Deal</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="price">$0.00</string>
    <string name="discount">0%</string>
    <string name="creator">Creator</string>
    <string name="phone">123&#8211;456&#8211;7890</string>
    <string name="url">URL</string>
    <string name="date">Date</string>
    <string name="from_date">From:</string>
    <string name="to_date">To:</string>
    <string name="push_notification">Push Notification</string>
    <string name="server_config">Server Config</string>
    <string name="ping_interval">Ping Interval (hour)</string>
    <string name="push_notification_enable">Enable push notification</string>
    <string name="push_notification_desc">This requires GCM</string>
    <string name="ping_interval_enable">Enable server ping</string>
    <string name="ping_interval_desc">This requires GPS</string>
    <string name="ping_server">Ping Server</string>
    <string name="subscription">Subscription</string>
    <string name="a_advertisement">Advertisement</string>
    <string name="a_psa">Public Service Announcement</string>
    <string name="a_event">Event</string>

</resources>