<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svDetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/detailIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/placeholder"
                android:src="@drawable/ic_menu_favorites" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/detailOldPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/price"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FF0000" />

                    <TextView
                        android:id="@+id/detailNewPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/price"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/detailDiscount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discount"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/highlights"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/detailHighlights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/highlights"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/detailFinePrintLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fineprint"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/detailFinePrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/fineprint"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/detailCreator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/creator"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/detailLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/detailPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/phone"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
            android:id="@+id/detailURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/detailMapIt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_it" />
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/detailFromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/from_date"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/detailToDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/to_date"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/about"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/detailAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/about"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</ScrollView>